# bfsongrepo

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/scripts/: example_spects.doctree
_sources/: index.md.txt
_sources/scripts/: example_spects.md.txt
data/: dataset.json
docs/: conf.py  index.md
docs/scripts/: example_spects.md
docs/source/: conf.py  index.rst
scripts/: example_spects.html
src/scripts/: convert_dataset.py  download_dataset.py  make_audio_annot_tars.py
