[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bfsongrepo"
description = 'Site and scripts for the Bengalese Finch Song Repository dataset'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "David Nicholson", email = "nickledave@users.noreply.github.com" },
]
version = "0.1.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "crowsetta >=4.0.0",
  "numpy >=1.18.1",
  "SoundFile >=0.10.3",
  "tqdm >=4.42.1",
]

[project.optional-dependencies]
tests = [
  "pytest >=6.2.1",
  "pytest-cov >=2.11.1",
  "tweetynet >=0.7.0",
]
docs = [
  "furo",
  "jupyterlab >=3.0.3",
  "jupytext >=1.13.8",
  "librosa >=0.9.1",
  "linkify-it-py >=2.0.0",
  "myst-parser >=0.17.0",
  "pyprojroot >=0.2.0",
  "sphinx >=3.4.1",
  "sphinxext-opengraph >=0.5.1",
  "sphinx-copybutton >=0.4.0",
  "sphinx-autobuild >=2021.3.14",
  "sphinx-design >=0.3.0",
  "sphinx-tabs >=3.4.1",
]
dev = [
  "twine >=3.3.0",
  "black >=20.8b1",
  "ipython >=7.0"
  "bfsongrepo[tests,docs]",
]
